eks/locust/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: locust-master
  namespace: locust
  labels:
    app: locust-master
spec:
  ports:
  - port: 5557
    targetPort: loc-master-p1
    protocol: TCP
    name: loc-master-p1
  - port: 5558
    targetPort: loc-master-p2
    protocol: TCP
    name: loc-master-p2
  selector:
    app: locust-master
---
apiVersion: v1
kind: Service
metadata:
  name: locust-master-web
  namespace: locust
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
  labels:
    app: locust-master
spec:
  ports:
  - port: 8089
    targetPort: loc-master-web
    protocol: TCP
    name: loc-master-web
  selector:
    app: locust-master
  type: NodePort
